Fix bug 'to many DML operation - 1' in resource component

--- a/force-app/main/default/classes/ResourceRemote.cls
+++ b/force-app/main/default/classes/ResourceRemote.cls
@@ -16,7 +16,7 @@ public with sharing class ResourceRemote {
         return null;
     }
 
-    @AuraEnabled(cacheable=true)
+    @AuraEnabled
     public static ResourceService.ResourceWrapperContainer getStudyDocuments() {
 
         try {
