Updated unit test

--- a/force-app/main/tests/classes/Test_LanguagePreferenceService.cls
+++ b/force-app/main/tests/classes/Test_LanguagePreferenceService.cls
@@ -7,10 +7,10 @@ private without sharing class Test_LanguagePreferenceService {
 
     @IsTest
     static void checkCodesReturn(){
-        System.assertEquals('ru', LanguagePreferenceService.getLanguageCode('ru'));
-        System.assertEquals('ru', LanguagePreferenceService.getLanguageCode('ru_BY'));
-        System.assertEquals('en_US', LanguagePreferenceService.getLanguageCode('en'));
-        System.assertEquals('en_US', LanguagePreferenceService.getLanguageCode('en_BY'));
+        System.assert(LanguagePreferenceService.getLanguageCode('ru').startsWith('ru'));
+        System.assert(LanguagePreferenceService.getLanguageCode('ru_BY').startsWith('ru'));
+        System.assert(LanguagePreferenceService.getLanguageCode('en').startsWith('en'));
+        System.assert(LanguagePreferenceService.getLanguageCode('en_BY').startsWith('en'));
         System.assertEquals(LanguagePreferenceService.DEFAULT_LANGUAGE_CODE, LanguagePreferenceService.getLanguageCode('by'));
         System.assertEquals(LanguagePreferenceService.DEFAULT_LANGUAGE_CODE, LanguagePreferenceService.getLanguageCode(null));
     }
