add communityType for patient delegate

--- a/force-app/main/default/classes/MyTeamRemote.cls
+++ b/force-app/main/default/classes/MyTeamRemote.cls
@@ -370,6 +370,7 @@ public without sharing class MyTeamRemote {
                 contactDelegate.AccountId = user.Contact.AccountId;
                 contactDelegate.Language__c = UserInfo.getLanguage();
                 contactDelegate.userCommunityMode__c = CommunityService.USER_MODE_PARTICIPANT;
+                contactDelegate.userCommunytyType__c = CommunityService.USER_MODE_PARTICIPANT;
                 contactDelegate.UserCommunityIsDelegate__c = true;
                 contactDelegate.MailingCountryCode = participant.Mailing_Country_Code__c;
                 contactDelegate.MailingStateCode = participant.Mailing_State_Code__c;
