PEH-950(49) add css

--- a/force-app/main/default/classes/TrialSearchContainerRemote.cls
+++ b/force-app/main/default/classes/TrialSearchContainerRemote.cls
@@ -40,6 +40,6 @@ public with sharing class TrialSearchContainerRemote {
         @AuraEnabled
         public List<Therapeutic_Area__c> cois;
         @AuraEnabled
-        public Boolean isGreenLine;
+        public Boolean isEnrollingCTP;
     }
 }
